# fl-watermark-poisoning-detection

./: .gitignore  AGENTS.md  RESULTS.md  plot_baseline.py  plot_evaluation.py  pyproject.toml  run_evaluation.sh  run_sweep.sh
pytorchexample/: attack.py  client_app.py  metrics.py  plotting.py  run_registry.py  server_app.py  task.py  watermark.py  watermarked_strategy.py
results/: .gitignore
