[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.6"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "datasets==4.8.4",
    "pycares>=4.11.0,<5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.31.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
# Training
num-server-rounds = 100
fraction-evaluate = 1.0
local-epochs = 1
learning-rate = 0.01
weight-decay = 0.0005
batch-size = 32
save-model = false
results-dir = "results"

# Watermark
watermark-type = "uchida"
watermark-message = "uchida"
watermark-num-bits = 64
watermark-layer = "backbone.fc.weight"
watermark-lambda = 0.01

# Server pretraining
pretrain-fraction = 0.1
pretrain-epochs = 10

# Early stopping
early-stopping-patience = 10
early-stopping-delta = 0.001

# Attacker
attacker-type = "none"
attacker-fraction = 0.0
max-trusted-ber = 1.0

# Attack-specific params (active based on attacker-type):
#   noise:       attacker-noise-scale
#   sign_flip:   sign-flip-scale
#   label_flip:  label-flip-offset, label-flip-scale
attacker-noise-scale = 1.0
sign-flip-scale = 1.0
label-flip-offset = 1
label-flip-scale = 5.0
num-classes = 10
